--- a/website.css
+++ b/website.css
@@ -3,7 +3,22 @@ body {
 }
 
 h3{
-  text-align: center;
+
+}
+
+
+
+.fadeIn{
+  animation:fadein 2s;
+  text-align:center;
+}
+
+@keyframes fadein{
+  from{opacity:0;
+  margin-top:60px;}
+    to{opacity:1;
+    margin-top:30px;}
+
 }
 
 .top{
@@ -36,7 +51,7 @@ h3{
     color:white;
     text-align:center;
     font-size:30px;
-
+    font-family:bungee shade;
 }
 
 
